Update session fetch URL to production endpoint

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -81,7 +81,7 @@
 </body>
 </html>
 <script>
-fetch("http://127.0.0.1:5000/session", { credentials: "include" })
+fetch("http://vicyon.onrender.com/session", { credentials: "include" })
   .then(res => res.json())
   .then(data => {
     if (data.logged_in) {
